java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/SameNameInnerClass.java
<error descr="Compact source file contains no 'main' method">public class SameNameInnerClass {

}

int a = 1;</error>